<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange_primary"
            android:paddingHorizontal="24dp"
            android:paddingVertical="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/hello_message"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="8dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_location"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Jl. Biru no 37"
                app:layout_constraintTop_toBottomOf="@id/tv_hello" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_search"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="12dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_location">

                <TextView
                    android:id="@+id/tv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12dp"
                    android:drawablePadding="8dp"
                    android:text="@string/search_hint"
                    android:textColor="@color/black_2"
                    android:textSize="16sp"
                    app:drawableLeftCompat="@drawable/ic_search" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="24dp"
            android:text="Categories"
            android:textColor="@color/black_primary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_header" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_category"
            tools:listitem="@layout/item_category" />

        <TextView
            android:id="@+id/tv_featured_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="8dp"
            android:text="@string/popular_food"
            android:textColor="@color/black_primary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_category" />

        <Button
            android:id="@+id/btn_explore_nearby"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/see_all"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@id/tv_featured_food"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/tv_featured_food"
            app:layout_constraintTop_toTopOf="@id/tv_featured_food" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_featured_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_featured_food"
            tools:listitem="@layout/item_menu" />

        <TextView
            android:id="@+id/tv_favorite_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="8dp"
            android:text="@string/recent_food"
            android:textColor="@color/black_primary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_featured_food" />

        <Button
            android:id="@+id/btn_explore_favorites"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/see_all"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@id/tv_favorite_food"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/tv_favorite_food"
            app:layout_constraintTop_toTopOf="@id/tv_favorite_food" />

        <TextView
            android:id="@+id/tv_favorite_food_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingHorizontal="24dp"
            android:text="@string/recent_food_description"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_favorite_food" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_favorite_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_favorite_food_description"
            tools:listitem="@layout/item_menu" />

        <TextView
            android:id="@+id/tv_new_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="8dp"
            android:text="@string/new_restaurants"
            android:textColor="@color/black_primary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_favorite_food" />

        <TextView
            android:id="@+id/tv_new_restaurant_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingHorizontal="24dp"
            android:text="@string/new_restaurant_desc"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_new_restaurant" />

        <Button
            android:id="@+id/btn_explore_new_restaurant"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/see_all"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@id/tv_new_restaurant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/tv_new_restaurant"
            app:layout_constraintTop_toTopOf="@id/tv_new_restaurant" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_new_restaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:paddingHorizontal="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_new_restaurant_description"
            tools:itemCount="3"
            tools:listitem="@layout/item_resto" />

        <TextView
            android:id="@+id/tv_randomize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="8dp"
            android:text="@string/find_random_food"
            android:textColor="@color/black_primary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_new_restaurant" />

        <TextView
            android:id="@+id/tv_randomize_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingHorizontal="24dp"
            android:text="@string/find_random_food_description"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_randomize" />

        <Button
            android:id="@+id/btn_randomize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:drawablePadding="8dp"
            android:text="@string/get_random_food"
            android:textAllCaps="false"
            android:elevation="4dp"
            app:icon="@drawable/ic_random"
            app:iconGravity="textStart"
            app:layout_constraintTop_toBottomOf="@id/tv_randomize_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>